# Chess-AI

./: LICENSE  makefile  maketestfile
chessBoard/: Board.cpp  Board.h  CMakeLists.txt  Makefile  board.cpp  main.cpp
chessBoard/board/: Board.cpp  Board.h  BoardHash.cpp  BoardHash.h  BoardInterface.cpp  BoardInterface.h  BoardRepr.cpp  BoardRepr.h
chessBoard/moves/: Moves.cpp  Moves.h
chessBoard/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
chessBoard/players/: BotPlayer.h  HumanPlayer.cpp  HumanPlayer.h  Player.h
chessBoard/tests/: CMakeLists.txt  boardTests.cpp
tests/: CMakeLists.txt  boardTests.cpp
