cmake_minimum_required(VERSION 3.2)
project(Chess-AI)

find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

add_executable(main main.cpp)
add_library(BOARD ./board/Board.h ./board/Board.cpp)
add_library(HASH ./board/BoardHash.h ./board/BoardHash.cpp)
add_library(REPR ./board/BoardRepr.h ./board/BoardRepr.cpp)
add_library(INTER ./board/BoardInterface.h ./board/BoardInterface.cpp)
add_library(BISHOP ./pieces/Bishop.h ./pieces/Bishop.cpp)
add_library(KING ./pieces/King.h ./pieces/King.cpp)
add_library(QUEEN ./pieces/Queen.h ./pieces/Queen.cpp)
add_library(ROOK ./pieces/Rook.h ./pieces/Rook.cpp)
add_library(KNIGHT ./pieces/Knight.h ./pieces/Knight.cpp)
add_library(PAWN ./pieces/Pawn.h ./pieces/Pawn.cpp)
add_library(PIECE ./pieces/Piece.h ./pieces/Piece.cpp)
add_library(MOVES ./moves/Moves.h ./moves/Moves.cpp)
add_library(HUMANPLAYER ./players/HumanPlayer.h ./players/HumanPlayer.cpp)
add_library(BOTPLAYER ./players/BotPlayer.h ./players/BotPlayer.cpp)
target_link_libraries(main "${TORCH_LIBRARIES}" BOARD HASH REPR INTER PIECE PAWN KNIGHT BISHOP ROOK QUEEN KING MOVES BOTPLAYER HUMANPLAYER)
set_property(TARGET main PROPERTY CXX_STANDARD 17)
